# reinforcement-learning-tp1

./: README.md  pyproject.toml  sujet.ipynb
multiarmbandits/: __init__.py  algos.py  arms.py  cli.py  utils.py
tests/: conftest.py  test_algos.py
